--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,25 +1,34 @@
+:root {
+  --bg-color: white;
+  --text-color: black;
+}
+
 html,
 body {
   height: 100%;
+  @include scroll;
 
-  .container {
-    max-width: 2520px;
-    padding: 1.5rem 5rem;
+  .myContainer {
+    padding: 96px 20rem 1.5rem 20rem;
 
     @include xl {
-      padding: 1rem 5rem;
+      padding: 88px 10rem 1rem 10rem;
     }
 
     @include md {
-      padding: 1rem 2.5rem;
+      padding: 88px 2.5rem 1rem 2.5rem;
     }
 
     @include sm {
-      padding: 1rem;
+      padding: 88px 1rem 1rem 1rem;
     }
 
     @include xs {
-      padding: 0.5rem;
+      padding: 80px 0.5rem 0.5rem 0.5rem;
     }
+  }
+
+  .n-image-preview-container {
+    z-index: 10000 !important;
   }
 }
