--- a/src/styles/mixins/_scroll.scss
+++ b/src/styles/mixins/_scroll.scss
@@ -2,16 +2,16 @@
 @mixin scroll {
   ::-webkit-scrollbar {
     height: 8px;
-    width: 8px;
+    width: 10px;
   }
 
   ::-webkit-scrollbar-thumb {
-    background: #888;
+    background: #cfcfcf;
     border-radius: 10px;
   }
 
   ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    background: #b9b9b9;
   }
 
   ::-webkit-scrollbar-track-piece {
