--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -31,4 +31,7 @@ body {
   .n-image-preview-container {
     z-index: 10000 !important;
   }
+  .n-drawer-container {
+    z-index: 10000 !important;
+  }
 }
