--- a/src/styles/_drawer.scss
+++ b/src/styles/_drawer.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   .drawer-title {
-    border-bottom: 1px solid $light1;
+    border-bottom: 1px solid $border-color;
     padding: 1rem;
     font-size: 18px;
     font-weight: bold;
@@ -15,11 +15,11 @@
       cursor: pointer;
 
       &.active {
-        background: $light1;
+        background: $border-color;
       }
 
       &:hover {
-        background: $light1;
+        background: $border-color;
       }
     }
   }
