--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,7 @@ $breakpoint-xxxxl: 1800px;
 $bg-color: var(--huan-bg-color);
 $border-color: var(--huan-border-color);
 $text-color: var(--huan-text-color);
+$modal-bg-color: var(--huan-modal-bg-color);
 $loading-bg-color: var(--huan-loading-bg-color);
 $loading-ball-color: var(--huan-loading-ball-color);
 
